fixed filter buttons being not centred

--- a/css/home.css
+++ b/css/home.css
@@ -551,6 +551,10 @@ h4{
 	.portfolioFilter a span{
 		display: none;
 	}
+
+	.portfolioFilter a{
+		margin: 0 25px;
+	}
 }
 
 @media (max-width: 516px){
